--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>HRZG Dev SIte</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Dev Site vom TeamPlatypus">
+    <link rel="stylesheet" href="stylesheet.css">
     <meta http-equiv="refresh" content="0;url=https://github.com/Maxklos">
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://github.com/Maxklos">click here</a>.</p>
+    <div class="container-clean">
+        <a href="./index.html">
+            <img src="./media/logo.webp" alt="Logo" style="width: 90px; height: 88px;" class="logo">
+        </a>
+    </div>
+
+    <div class="container">
+        <p>If you are not redirected,</p> <a href="https://github.com/Maxklos" class="link">click here</a>
+    </div>
+
 </body>
 </html>
